; ModuleID = '/home/carl/AnghaBench/skynet/3rd/lua-md5/extr_md5lib.c_lmd5.c'
source_filename = "/home/carl/AnghaBench/skynet/3rd/lua-md5/extr_md5lib.c_lmd5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lmd5 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lmd5(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca [16 x i8], align 16
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i8* @luaL_checklstring(i32* %6, i32 1, i64* %4)
  store i8* %7, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i64, i64* %4, align 8
  %10 = getelementptr inbounds [16 x i8], [16 x i8]* %3, i64 0, i64 0
  %11 = call i32 @md5(i8* %8, i64 %9, i8* %10)
  %12 = load i32*, i32** %2, align 8
  %13 = getelementptr inbounds [16 x i8], [16 x i8]* %3, i64 0, i64 0
  %14 = call i32 @lua_pushlstring(i32* %12, i8* %13, i64 16)
  ret i32 1
}

declare dso_local i8* @luaL_checklstring(i32*, i32, i64*) #1

declare dso_local i32 @md5(i8*, i64, i8*) #1

declare dso_local i32 @lua_pushlstring(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
